buildVersionUpdate compiles now.
+ also changed output to the run dir

--- a/GeneralsMD/Code/Tools/buildVersionUpdate/buildVersionUpdate.vcxproj
+++ b/GeneralsMD/Code/Tools/buildVersionUpdate/buildVersionUpdate.vcxproj
@@ -43,13 +43,13 @@
     <_ProjectFileVersion>17.0.35707.178</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>.\Debug\</OutDir>
-    <IntDir>.\Debug\</IntDir>
+    <OutDir>..\..\..\Run\buildVersionUpdate\Debug\</OutDir>
+    <IntDir>..\..\..\Run\buildVersionUpdate\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>.\Release\</OutDir>
-    <IntDir>.\Release\</IntDir>
+    <OutDir>..\..\..\Run\buildVersionUpdate\Release\</OutDir>
+    <IntDir>..\..\..\Run\buildVersionUpdate\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
