--- a/GeneralsMD/Code/Tools/Compress/Compress.vcxproj
+++ b/GeneralsMD/Code/Tools/Compress/Compress.vcxproj
@@ -43,18 +43,18 @@
     <_ProjectFileVersion>17.0.35707.178</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>.\Release\</OutDir>
-    <IntDir>.\Release\</IntDir>
+    <OutDir>..\..\..\Run\Compress\Release\</OutDir>
+    <IntDir>..\..\..\Run\Compress\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>.\Debug\</OutDir>
-    <IntDir>.\Debug\</IntDir>
+    <OutDir>..\..\..\Run\Compress\Debug\</OutDir>
+    <IntDir>..\..\..\Run\Compress\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Midl>
-      <TypeLibraryName>.\Release/Compress.tlb</TypeLibraryName>
+      <TypeLibraryName>..\..\..\Run\Compress\Release/Compress.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
@@ -65,10 +65,10 @@
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
-      <PrecompiledHeaderOutputFile>.\Release/Compress.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
-      <ObjectFileName>.\Release/</ObjectFileName>
-      <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
+      <PrecompiledHeaderOutputFile>..\..\..\Run\Compress\Release/Compress.pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>..\..\..\Run\Compress\Release/</AssemblerListingLocation>
+      <ObjectFileName>..\..\..\Run\Compress\Release/</ObjectFileName>
+      <ProgramDataBaseFileName>..\..\..\Run\Compress\Release/</ProgramDataBaseFileName>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
     </ClCompile>
@@ -90,12 +90,12 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release/Compress.bsc</OutputFile>
+      <OutputFile>..\..\..\Run\Compress\Release/Compress.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Midl>
-      <TypeLibraryName>.\Debug/Compress.tlb</TypeLibraryName>
+      <TypeLibraryName>..\..\..\Run\Compress\Debug/Compress.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
@@ -105,10 +105,10 @@
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Debug/Compress.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
-      <ObjectFileName>.\Debug/</ObjectFileName>
-      <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
+      <PrecompiledHeaderOutputFile>..\..\..\Run\Compress\Debug/Compress.pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>..\..\..\Run\Compress\Debug/</AssemblerListingLocation>
+      <ObjectFileName>..\..\..\Run\Compress\Debug/</ObjectFileName>
+      <ProgramDataBaseFileName>..\..\..\Run\Compress\Debug/</ProgramDataBaseFileName>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
@@ -131,7 +131,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug/Compress.bsc</OutputFile>
+      <OutputFile>..\..\..\Run\Compress\Debug/Compress.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
