--- a/GeneralsMD/Code/Tools/Launcher/DatGen/DatGen.vcxproj
+++ b/GeneralsMD/Code/Tools/Launcher/DatGen/DatGen.vcxproj
@@ -43,13 +43,13 @@
     <_ProjectFileVersion>17.0.35707.178</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>.\Debug\</OutDir>
-    <IntDir>.\Debug\</IntDir>
+    <OutDir>..\..\..\Run\datGenUpdate\Debug\</OutDir>
+    <IntDir>..\..\..\Run\datGenUpdate\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>.\Release\</OutDir>
-    <IntDir>.\Release\</IntDir>
+    <OutDir>..\..\..\Run\datGenUpdate\Release\</OutDir>
+    <IntDir>..\..\..\Run\datGenUpdate\Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -58,7 +58,7 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Debug/DatGen.tlb</TypeLibraryName>
+      <TypeLibraryName>..\..\..\Run\datGenUpdate\Debug/DatGen.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
@@ -68,10 +68,10 @@
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Debug/DatGen.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
-      <ObjectFileName>.\Debug/</ObjectFileName>
-      <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
+      <PrecompiledHeaderOutputFile>..\..\..\Run\datGenUpdate\Debug/DatGen.pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>..\..\..\Run\datGenUpdate\Debug/</AssemblerListingLocation>
+      <ObjectFileName>..\..\..\Run\datGenUpdate\Debug/</ObjectFileName>
+      <ProgramDataBaseFileName>..\..\..\Run\datGenUpdate\Debug/</ProgramDataBaseFileName>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
@@ -94,7 +94,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug/DatGen.bsc</OutputFile>
+      <OutputFile>..\..\..\Run\datGenUpdate\Debug/DatGen.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -103,7 +103,7 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Release/DatGen.tlb</TypeLibraryName>
+      <TypeLibraryName>..\..\..\Run\datGenUpdate\Release/DatGen.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
@@ -114,10 +114,10 @@
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
-      <PrecompiledHeaderOutputFile>.\Release/DatGen.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
-      <ObjectFileName>.\Release/</ObjectFileName>
-      <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
+      <PrecompiledHeaderOutputFile>..\..\..\Run\datGenUpdate\Release/DatGen.pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>..\..\..\Run\datGenUpdate\Release/</AssemblerListingLocation>
+      <ObjectFileName>..\..\..\Run\datGenUpdate\Release/</ObjectFileName>
+      <ProgramDataBaseFileName>..\..\..\Run\datGenUpdate\Release/</ProgramDataBaseFileName>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
     </ClCompile>
@@ -139,7 +139,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release/DatGen.bsc</OutputFile>
+      <OutputFile>..\..\..\Run\datGenUpdate\Release/DatGen.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
